SET(SRC_HOME_PATH ${PROJECT_HOME}/src) 
INCLUDE_DIRECTORIES(${SRC_HOME_PATH})



FILE(GLOB MODULE_DIRECTORIES ${SRC_HOME_PATH}/*)

foreach(DIR ${MODULE_DIRECTORIES})
  IF(IS_DIRECTORY ${DIR})
    IF ("${DIR}" MATCHES "chapter2")
      MESSAGE(STATUS "MODULE_DIRECTORIES : ${DIR}")   
      # continue()
      ADD_SUBDIRECTORY(${DIR})
    ENDIF()
  ENDIF()
endforeach()

